<resources>
    <string name="app_name">PlantApp</string>
    <string name="onboarding_title">Onboarding Title</string>
    <string name="onboarding_description">Onboarding Description</string>
    <string name="onboarding_terms_and_policy">By tapping next, you are agreeing to PlantID <u>Terms of Use</u> &amp; <u>Privacy Policy.</u> </string>
    <string name="get_started">Get Started</string>
    <string name="btn_continue">Continue</string>
    <string name="onboarding_first_page_title_main">Welcome to </string>
    <string name="onboarding_first_page_title_highlight"> PlantApp</string>
    <string name="onboarding_first_page_desc">Identify more than 3000+ plants and 88% accuracy.</string>
    <string name="onboarding_second_page_title_main">Take a photo to</string>
    <string name="onboarding_second_page_title_highlight"> identify</string>
    <string name="onboarding_second_page_title_subtext">the plant!</string>
    <string name="onboarding_third_page_title_main">Get plant</string>
    <string name="onboarding_third_page_title_highlight">care guides</string>
    <string name="onboarding_trial_button">Try free for 3 days</string>
    <string name="onboarding_paywall_page_title"><![CDATA[<b>PlantApp</b> Premium]]></string>
    <string name="onboarding_paywall_page_desc">Access All Features</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="overlay_effect">Overlay Effect</string>
    <string name="brush_underline_effect">Brush Underline Effect</string>
    <string name="premium">Premium</string>
    <string name="plant_app">PlantApp</string>
    <string name="premium_desc">Access All Features</string>
    <string name="icon">Icon</string>
    <string name="unlimited">Unlimited</string>
    <string name="plant_identify">Plant Identify</string>
    <string name="process">Process</string>
    <string name="faster">Faster</string>
    <string name="speedometer_icon">speedometer icon</string>
    <string name="detailed">Detailed</string>
    <string name="plant_care">Plant care</string>
    <string name="treatment_icon">Treatment Icon</string>
    <string name="premium_charge_note">After the 3-day free trial period you’ll be charged ₺274.99 per year unless you cancel before the trial expires. Yearly Subscription is Auto-Renewable</string>
    <string name="premium_footer">Terms  •  Privacy  •  Restore</string>
    <string name="first_offer_title">1 Year</string>
    <string name="basic_offer_title">1 Month</string>
    <string name="first_offer_desc">First 3 days free, then $529.99/year</string>
    <string name="basic_offer_desc">$2.99/month, auto renewable</string>
    <string name="discount_percentage">Save 50%</string>
    <string name="close_icon">Close Icon</string>
    <string name="paywall_background_image">Paywall Background Image</string>
    <string name="radio_button">radio button</string>
    <string name="image_home_background">Image home background</string>
    <string name="search_for_plants">Search for plants</string>
    <string name="premium_card_title">FREE Premium Available</string>
    <string name="premium_card_desc">Tap to upgrade your account!</string>
    <string name="error">There no items here</string>
</resources>