<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_premium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_200sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        style="@style/ExtraBoldTitleTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:text="@string/plant_app"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_premium_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_premium"
        style="@style/LightTitleTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/premium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_premium_desc"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_premium_desc"
        style="@style/LightTitleTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/premium_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="@id/tv_premium"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <include
        android:id="@+id/premium_cards"
        layout="@layout/layout_premium_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_premium_desc" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/premium_cards"
        app:layout_constraintVertical_bias="1.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_12sdp" />

        <include
            android:id="@+id/btn_subscription_regular"
            layout="@layout/button_subscription_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_12sdp" />

        <include
            android:id="@+id/btn_subscription_highlighted"
            layout="@layout/button_subscription_highlighted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_16sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/OnboardingPrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_trial_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_8sdp" />

        <TextView
            android:id="@+id/tv_charge_note"
            style="@style/LightTitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/premium_charge_note"
            android:textAlignment="center"
            android:textColor="@color/pastel_green"
            android:textSize="@dimen/_9ssp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_8sdp" />

        <TextView
            android:id="@+id/tv_charge_footer"
            style="@style/MediumTitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/premium_footer"
            android:textAlignment="center"
            android:textColor="@color/pastel_green"
            android:textSize="@dimen/_10ssp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>