<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/layout_premium_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_scanner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/transparent_card_bg_gray"
                app:cardCornerRadius="15dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_card_scanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_scanner"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/ic_bg_dark_gray"
                        android:contentDescription="@string/scanner_icon"
                        android:padding="4dp"
                        android:src="@drawable/ic_scanner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/card_title_scanner"
                        style="@style/MediumTitleTextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/unlimited"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/iv_scanner"
                        app:layout_constraintTop_toBottomOf="@+id/iv_scanner" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularTitleTextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/plant_identify"
                        android:textColor="@color/light_gray"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/card_title_scanner"
                        app:layout_constraintStart_toStartOf="@+id/iv_scanner"
                        app:layout_constraintTop_toBottomOf="@+id/card_title_scanner" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_speedometer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:cardBackgroundColor="@color/transparent_card_bg_gray"
                app:cardCornerRadius="15dp"
                app:strokeWidth="0dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_card_speedometer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_speedometer"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/ic_bg_dark_gray"
                        android:contentDescription="@string/speedometer_icon"
                        android:padding="4dp"
                        android:src="@drawable/ic_speedometer"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/card_title_speedometer"
                        style="@style/MediumTitleTextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/faster"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/iv_speedometer"
                        app:layout_constraintTop_toBottomOf="@+id/iv_speedometer" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularTitleTextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/process"
                        android:textColor="@color/light_gray"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/card_title_speedometer"
                        app:layout_constraintStart_toStartOf="@+id/iv_speedometer"
                        app:layout_constraintTop_toBottomOf="@+id/card_title_speedometer" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_treatment"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:cardBackgroundColor="@color/transparent_card_bg_gray"
                app:cardCornerRadius="15dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_card_treatment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_treatment"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/ic_bg_dark_gray"
                        android:contentDescription="@string/treatment_icon"
                        android:padding="4dp"
                        android:src="@drawable/ic_herbal_treatment"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/card_title_treatment"
                        style="@style/MediumTitleTextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/detailed"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/iv_treatment"
                        app:layout_constraintTop_toBottomOf="@+id/iv_treatment" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularTitleTextAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/plant_care"
                        android:textColor="@color/light_gray"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/card_title_treatment"
                        app:layout_constraintStart_toStartOf="@+id/iv_treatment"
                        app:layout_constraintTop_toBottomOf="@+id/card_title_treatment" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>