<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:backgroundTint="@color/home_bg"
    tools:context=".presentation.home.HomeFragment">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="@dimen/_175sdp"
        android:contentDescription="@string/image_home_background"
        android:scaleType="fitEnd"
        android:src="@drawable/image_home"
        app:layout_constraintBottom_toBottomOf="@id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24ssp"
        android:layout_marginTop="@dimen/_36sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="Hi, plant lover!"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="Good Afternoon! ⛅"
            android:textColor="@color/gray"
            android:textSize="@dimen/_20ssp" />

    </LinearLayout>

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:hint="@string/search_for_plants"
        app:backgroundTint="@color/transparent_search_bar_background"
        app:layout_constraintBottom_toBottomOf="@+id/iv_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_greetings"
        app:navigationIcon="@drawable/ic_search"
        app:navigationIconTint="@color/search_bar_gray"
        app:strokeColor="@color/transparent_search_bar_stroke"
        app:strokeWidth="@dimen/_1sdp" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/premium_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@color/premium_card_background"
        app:cardBackgroundColor="@color/premium_card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/ic_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <LinearLayout
                android:id="@+id/texts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_arrow"
                app:layout_constraintStart_toEndOf="@+id/iv_message"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvPremiumTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:text="@string/premium_card_title"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPremiumSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:text="@string/premium_card_desc"
                    android:textSize="@dimen/_9ssp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_premium_arrow"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_questionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/get_started"
        android:fontFamily="@font/rubik_medium"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/premium_card"
        app:layout_constraintTop_toBottomOf="@id/premium_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_questionsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/layout_question_item"
        tools:itemCount="3"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_16sdp"
        android:clipToPadding="false"
        android:scrollbars="none" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewQuestions"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/layout_category_item" />

</androidx.constraintlayout.widget.ConstraintLayout>